--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,24 +7,25 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.roman.mynote.ui.HomeFragment"
+        android:name="com.roman.mynote.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_noteFragment"
             app:destination="@id/noteFragment" />
-        <argument
-            android:name="item_note"
-            app:argType="com.roman.mynote.data.model.Note"
-            app:nullable="true"/>
+        />
     </fragment>
     <fragment
         android:id="@+id/noteFragment"
-        android:name="com.roman.mynote.ui.NoteFragment"
+        android:name="com.roman.mynote.ui.note.NoteFragment"
         android:label="fragment_note"
         tools:layout="@layout/fragment_note" >
         <action
             android:id="@+id/action_noteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <argument
+            android:name="argNote"
+            app:argType="com.roman.mynote.data.model.Note"
+            app:nullable="true" />
     </fragment>
 </navigation>
