--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/notes_container"
-    app:cardBackgroundColor="@color/color_secundary"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="16sp"
-    android:layout_margin="12dp">
+    android:layout_margin="12dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:checkable="true">
 
     <LinearLayout
         android:orientation="vertical"
@@ -39,7 +39,6 @@
             android:textSize="14sp"
             android:maxLines="10"
             android:padding="8dp"
-            android:textColor="@color/text_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -56,4 +55,4 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
