--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_homeFragment_to_noteFragment"
             app:destination="@id/noteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_newNoteFragment"
+            app:destination="@id/newNoteFragment" />
         />
     </fragment>
     <fragment
@@ -24,8 +27,17 @@
             android:id="@+id/action_noteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <argument
-            android:name="argNote"
-            app:argType="com.roman.mynote.data.model.Note"
-            app:nullable="true" />
+            android:name="argId"
+            app:argType="integer" />
+        />
+    </fragment>
+    <fragment
+        android:id="@+id/newNoteFragment"
+        android:name="com.roman.mynote.ui.newnote.NewNoteFragment"
+        android:label="NewNoteFragment"
+        tools:layout="@layout/fragment_new_note">
+        <action
+            android:id="@+id/action_newNoteFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
