--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -5,43 +5,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:context=".ui.note.NoteFragment">
 
 
-
-        <!--
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="material3.textinputlayout"
-                android:layout_margin="8dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Title" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-                android:layout_marginBottom="8dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_note"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:hint="Note" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-        -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_title"
             android:layout_width="match_parent"
@@ -59,7 +25,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layout_input_comment"
+            android:id="@+id/layout_input_title"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:hint="Redactar"
