--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -12,4 +12,8 @@
         android:icon="@drawable/ic_delete"
         app:showAsAction="always"
         android:title="Delete"/>
+
+    <item
+        android:id="@+id/detail"
+        android:title="Detalle"/>
 </menu>
