--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,4 +10,13 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="ContentEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:lines">15</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:gravity">start|top</item>
+    </style>
 </resources>
