--- a/app/src/main/res/layout/fragment_dialog_info_note.xml
+++ b/app/src/main/res/layout/fragment_dialog_info_note.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="@string/lorem_text"
+            tools:text="@string/lorem_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/div_1" />
