--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,55 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notes_container"
     android:layout_margin="12dp"
     android:clickable="true"
     android:focusable="true"
     android:checkable="true">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textviewtitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:ellipsize="marquee"
-                android:fontFamily="@font/aldrich"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="12dp"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="Title"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <ImageView
-                android:id="@+id/image_pind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_pin"
-                android:layout_margin="8dp"
-                android:layout_alignWithParentIfMissing="true"
-                android:layout_alignParentEnd="true"
-                />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/textviewtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:ellipsize="marquee"
+            android:fontFamily="@font/aldrich"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:padding="12dp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="Title"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_pind"/>
+
+        <ImageView
+            android:id="@+id/image_pind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pin"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
+            tools:visibility= "visible"
+            />
 
         <TextView
             android:id="@+id/text_notes"
             android:text="Notas"
             android:textSize="14sp"
-            android:maxLines="10"
+            android:maxLines="4"
             android:padding="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textviewtitle"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/text_date"
@@ -62,8 +65,11 @@
             android:maxLines="10"
             android:padding="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/text_notes"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
