--- a/app/src/main/res/layout/bottom_sheet_dialog_new_note.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_new_note.xml
@@ -1,65 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
-   <TextView
-       android:id="@+id/bottom_sheet_title"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginStart="16dp"
-       android:layout_marginTop="16dp"
-       android:drawablePadding="8dp"
-       android:padding="4dp"
-       android:text="@string/add_note"
-       android:textStyle="bold"
-       app:drawableStartCompat="@drawable/ic_close"
-       app:drawableTint="?attr/colorPrimary"
-       android:clickable="true"
-       android:focusable="true"/>
-
-    <ImageButton
-        android:id="@+id/save_note"
-        android:layout_width="wrap_content"
+    <!-- Encabezado con botón de cierre y título -->
+    <LinearLayout
+        android:id="@+id/header_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="Done"
-        android:padding="8dp"
-        android:src="@drawable/ic_save"
-        app:tint="?attr/colorPrimary"
-        android:clickable="true"
-        android:focusable="true"/>
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
+        android:padding="@dimen/margin_medium">
 
+        <!-- ImageButton de cierre en el lado izquierdo -->
+        <ImageButton
+            android:id="@+id/image_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            app:tint="?attr/colorPrimary"
+            android:background="?attr/actionBarItemBackground"
+            android:contentDescription="Cerrar"
+            />
+
+        <!-- Título en el centro -->
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_new_note"
+            android:layout_marginHorizontal="@dimen/margin_medium"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            />
+
+        <!-- ImageButton en el lado derecho -->
+        <ImageButton
+            android:id="@+id/image_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_save"
+            android:background="?attr/actionBarItemBackground"
+            app:tint="?attr/colorPrimary"
+            android:layout_gravity="end|center_vertical"
+            android:contentDescription="Botón derecho"
+            />
+    </LinearLayout>
+
+    <!-- Línea divisoria -->
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/bottom_sheet_title"
+        android:layout_below="@+id/header_title"
         android:layout_marginTop="16dp"
         />
 
+    <!-- Contenido del formulario -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="8dp"
         android:layout_below="@+id/divider"
+        android:layout_marginHorizontal="8dp"
         android:padding="10dp">
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/outlined_text_field_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/title_new_note"
-            >
+            android:hint="@string/title_new_note">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_title"
@@ -70,11 +86,11 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/outlined_text_field_note"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
             android:layout_below="@+id/outlined_text_field_title"
             android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_alignParentEnd="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_note"
@@ -82,5 +98,7 @@
                 android:layout_height="match_parent"
                 />
         </com.google.android.material.textfield.TextInputLayout>
+
+
     </RelativeLayout>
 </RelativeLayout>
