--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -62,4 +62,5 @@
     <color name="md_theme_dark_outlineVariant">#41474D</color>
     <color name="md_theme_dark_scrim">#000000</color>
     <color name="CustomColor1">#AABEFF</color>
+    <color name="md_theme_card_background">#1D252C</color>
 </resources>
