--- a/app/src/main/res/layout/layout_tools_key_bourd.xml
+++ b/app/src/main/res/layout/layout_tools_key_bourd.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.cardview.widget.CardView android:layout_width="match_parent"
+    android:layout_height="50dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="@dimen/card_md_3"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/md_theme_dark_inversePrimary">
-        <TextView
-            android:id="@+id/text"
-            android:text="@string/title_edit_note"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/item_key_option_n"
+            tools:text="N"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            style="@style/MaterialItemButtonKeyBoard"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/item_key_option_c"
+            tools:text="C"
+            android:textStyle="italic"
+            app:layout_constraintStart_toEndOf="@+id/item_key_option_n"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            style="@style/MaterialItemButtonKeyBoard"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_bullet_point"
+            app:icon="@drawable/ic_format_list_bulleted"
+            app:iconTint="?attr/colorPrimary"
+            android:background="?attr/actionBarItemBackground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/item_key_option_c"
+            style="@style/MaterialItemButtonKeyBoard"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</layout>
+
+</androidx.cardview.widget.CardView>
