--- a/app/src/main/res/layout/home_search.xml
+++ b/app/src/main/res/layout/home_search.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:listitem="@layout/layout_result_search_note"
         android:paddingBottom="100dp" />
 
 </RelativeLayout>
