--- a/app/src/main/res/layout/layout_auth.xml
+++ b/app/src/main/res/layout/layout_auth.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="?attr/materialCardViewFilledStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipToPadding="false"
     android:orientation="vertical"
     app:cardBackgroundColor="@color/md_theme_card_background"
-    app:cardCornerRadius="@dimen/radius_car_dialog"
-    >
+    app:cardCornerRadius="@dimen/radius_car_dialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/id_text_subtitle"
-                        android:text="@string/sign_in"
+                        tools:text="@string/sign_in"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -96,22 +96,42 @@
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/outlined_text_field_password_repeat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/outlined_text_field_password"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_margin="@dimen/margin_small"
+                        android:hint="@string/password_repeat"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_text_password_repeat"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/action_auth"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/sign_in"
-                        app:layout_constraintTop_toBottomOf="@+id/outlined_text_field_password"
+                        tools:text="@string/sign_in"
+                        app:layout_constraintTop_toBottomOf="@+id/outlined_text_field_password_repeat"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_margin="@dimen/margin_small"/>
+                        android:layout_margin="@dimen/margin_small"
+                        />
 
                     <TextView
-                        android:id="@+id/text_sign_up"
+                        android:id="@+id/text_auth"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/sign_up"
+                        tools:text="@string/sign_up"
                         android:textStyle="bold"
                         android:textColor="?attr/colorPrimary"
                         android:clickable="true"
@@ -128,19 +148,22 @@
                         android:layout_width="100dp"
                         android:layout_height="1dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/text_sign_up"
-                        app:layout_constraintBottom_toBottomOf="@+id/text_sign_up"
-                        app:layout_constraintEnd_toStartOf="@+id/text_sign_up"/>
+                        app:layout_constraintTop_toTopOf="@+id/text_auth"
+                        app:layout_constraintBottom_toBottomOf="@+id/text_auth"
+                        app:layout_constraintEnd_toStartOf="@+id/text_auth"/>
 
 
                     <com.google.android.material.divider.MaterialDivider
                         android:id="@+id/div_light"
                         android:layout_width="100dp"
                         android:layout_height="1dp"
-                        app:layout_constraintStart_toEndOf="@+id/text_sign_up"
-                        app:layout_constraintTop_toTopOf="@+id/text_sign_up"
-                        app:layout_constraintBottom_toBottomOf="@+id/text_sign_up"
+                        app:layout_constraintStart_toEndOf="@+id/text_auth"
+                        app:layout_constraintTop_toTopOf="@+id/text_auth"
+                        app:layout_constraintBottom_toBottomOf="@+id/text_auth"
                         app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
