--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="radius_car_dialog">32dp</dimen>
     <dimen name="padding_medium">12dp</dimen>
     <dimen name="margin_small">12dp</dimen>
+    <dimen name="card_md_3">3dp</dimen>
+    <dimen name="size_title">18dp</dimen>
 </resources>
