--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -29,4 +29,13 @@
         <item name="android:textSize">@dimen/m3_toolbar_text_size_title</item>
     </style>
 
+    <style name="MaterialItemButtonKeyBoard" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
+
 </resources>
