create class time_manage

--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.motion.widget.MotionLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/notes_container"
-    android:layout_margin="12dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:checkable="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    tools:showPaths="true"
+    app:layoutDescription="@xml/note_card_scene"
+    tools:ignore="MotionLayoutInvalidSceneFileReference">
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/notes_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:checkable="true"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -87,3 +95,17 @@
 
 
     </com.google.android.material.card.MaterialCardView>
+
+    <ImageView
+        android:id="@+id/icon_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete"
+        android:backgroundTint="?attr/colorPrimary"
+        android:layout_margin="@dimen/margin_small"
+        app:layout_constraintTop_toBottomOf="@+id/notes_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+</androidx.constraintlayout.motion.widget.MotionLayout>
