--- a/app/src/main/res/layout/bar_action_layout.xml
+++ b/app/src/main/res/layout/bar_action_layout.xml
@@ -44,12 +44,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:backgroundTint="?colorSurface"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:iconTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:icon="@drawable/ic_save"
+        tools:icon="@drawable/baseline_more_vert_24"
         tools:visibility="visible" />
 
     <com.google.android.material.materialswitch.MaterialSwitch
