--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="margin_small">12dp</dimen>
     <dimen name="card_md_3">3dp</dimen>
     <dimen name="size_title">18dp</dimen>
+    <dimen name="padding_small">8dp</dimen>
 </resources>
