--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_newNoteFragment"
             app:destination="@id/newNoteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_alertFragment"
+            app:destination="@id/alertFragment" />
         />
     </fragment>
     <fragment
@@ -40,4 +43,14 @@
             android:id="@+id/action_newNoteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/alertFragment"
+        android:name="com.roman.mynote.ui.alert.AlertFragment"
+        android:label="AlertFragment"
+        tools:layout="@layout/fragment_alert_notifications"/>
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.roman.mynote.ui.setting.SettingFragment"
+        tools:layout="@layout/fragment_setting"
+        android:label="SettingFragment" />
 </navigation>
