--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,4 +3,12 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aldrich</item>
     </array>
+
+    <string-array name="bar_chart_labels">
+        <item>Label 1</item>
+        <item>Label 2</item>
+        <item>Label 3</item>
+        <item>Label 4</item>
+        <item>Label 5</item>
+    </string-array>
 </resources>
