--- a/app/src/main/res/layout/layout_auth.xml
+++ b/app/src/main/res/layout/layout_auth.xml
@@ -27,18 +27,30 @@
             android:padding="@dimen/padding_medium"
             />
 
+        <ImageButton
+            android:id="@+id/image_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_settings"
+            android:background="?attr/actionBarItemBackground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="?attr/colorPrimary"
+            android:padding="@dimen/padding_medium"/>
+
         <TextView
             android:id="@+id/text_title"
             android:text="@string/app_name"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="@dimen/size_title"
             android:layout_width="wrap_content"
             android:fontFamily="@font/aldrich"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/image_setting"
             app:layout_constraintStart_toEndOf="@+id/image_close"
-            app:layout_constraintBottom_toBottomOf="@+id/image_close"/>
+            app:layout_constraintBottom_toBottomOf="@+id/image_close"
+            tools:ignore="SpUsage" />
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
