--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,111 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<com.google.android.material.card.MaterialCardView android:id="@+id/notes_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:checkable="true"
+    tools:ignore="MissingConstraints"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showPaths="true"
-    app:layoutDescription="@xml/note_card_scene"
-    tools:ignore="MotionLayoutInvalidSceneFileReference">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/notes_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:checkable="true"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        tools:ignore="MissingConstraints">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/text_view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:ellipsize="marquee"
+            android:fontFamily="@font/aldrich"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:padding="12dp"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            tools:text="@string/title_new_note"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/image_pind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pin"
+            android:layout_margin="8dp"
+            android:background="?attr/actionBarItemBackground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:contentDescription="@string/description_image" />
+
+
+        <TextView
+            android:id="@+id/text_notes"
+            tools:text="@string/lorem_text"
+            android:textSize="14sp"
+            android:maxLines="4"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="12dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:id="@+id/text_view_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:ellipsize="marquee"
-                android:fontFamily="@font/aldrich"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="12dp"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                tools:text="@string/title_new_note"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_pind" />
+        <TextView
+            android:id="@+id/text_date"
+            android:text="@string/example_date"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            android:gravity="end"
+            android:maxLines="10"
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/text_notes"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageButton
-                android:id="@+id/image_pind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_pin"
-                android:layout_margin="8dp"
-                android:background="?attr/actionBarItemBackground"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:visibility="invisible"
-                tools:visibility="visible"
-                android:contentDescription="@string/description_image" />
+        <View
+            android:id="@+id/color_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            tools:background="@color/md_theme_light_primary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/text_notes"
-                tools:text="@string/lorem_text"
-                android:textSize="14sp"
-                android:maxLines="4"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="12dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_title"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/text_date"
-                android:text="@string/example_date"
-                android:singleLine="true"
-                android:ellipsize="marquee"
-                android:scrollHorizontally="true"
-                android:textSize="12sp"
-                android:textStyle="normal"
-                android:gravity="end"
-                android:maxLines="10"
-                android:padding="8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/text_notes"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <View
-                android:id="@+id/color_indicator"
-                android:layout_width="match_parent"
-                android:layout_height="8dp"
-                tools:background="@color/md_theme_light_primary"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <ImageView
-        android:id="@+id/icon_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete"
-        android:backgroundTint="?attr/colorPrimary"
-        android:layout_margin="@dimen/margin_small"
-        app:layout_constraintTop_toBottomOf="@+id/notes_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</com.google.android.material.card.MaterialCardView>
