--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="card_md_3">3dp</dimen>
     <dimen name="size_title">18dp</dimen>
     <dimen name="padding_small">8dp</dimen>
+    <dimen name="title_size_item">18sp</dimen>
 </resources>
