--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/colorSurface">
 
+
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/anim_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            app:lottie_rawRes="@raw/shake_a_empty_box"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            android:scaleType="center"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -19,21 +31,66 @@
             android:clipToPadding="false"
             android:layoutAnimation="@anim/layout_animation"
             android:paddingBottom="100dp"
-            tools:listitem="@layout/note_card"
-            />
+            tools:listitem="@layout/note_card" />
+
+
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/extended_action_add_new_note"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:layout_gravity="bottom|end"
-        app:layout_anchorGravity="bottom|end"
-        android:src="@drawable/ic_add"/>
+        app:layout_anchorGravity="bottom|end">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/main_button_floating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_add"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/note_button_floating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/main_button_floating"
+            app:layout_constraintEnd_toEndOf="@+id/main_button_floating"
+            app:layout_constraintStart_toStartOf="@+id/main_button_floating"
+            android:src="@drawable/ic_note_add"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/audio_button_floating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/note_button_floating"
+            app:layout_constraintBottom_toTopOf="@+id/note_button_floating"
+            app:layout_constraintEnd_toEndOf="@+id/note_button_floating"
+            android:src="@drawable/ic_audio"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/reminder_button_floating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/audio_button_floating"
+            app:layout_constraintBottom_toTopOf="@+id/audio_button_floating"
+            app:layout_constraintEnd_toEndOf="@+id/audio_button_floating"
+            android:src="@drawable/ic_note_add"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -92,4 +149,6 @@
             android:id="@+id/include_result"
             layout="@layout/home_search" />
     </com.google.android.material.search.SearchView>
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
